--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,13 +14,15 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-VignetteBuilder: knitr
+#VignetteBuilder: knitr
 Depends:
   phyloseq,
   tidyverse,
   igraph,
   tictoc,
-  randomcoloR
+  randomcoloR,
+  caret
 Suggests: 
-  knitr,
-  rmarkdown
+    knitr,
+    rmarkdown,
+    testthat
