ms material added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,6 @@ export(getMean)
 export(lasso)
 export(model.lasso)
 export(model.linear)
+export(read.mothur.shared)
+export(read.mothur.taxonomy)
+export(taxacolor)
