--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(getMean)
 export(lasso)
 export(model.lasso)
 export(model.linear)
+export(node.role)
 export(read.mothur.shared)
 export(read.mothur.taxonomy)
 export(taxacolor)
