--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(model.linear)
 export(node.role)
 export(read.mothur.shared)
 export(read.mothur.taxonomy)
+export(summarizePhONA)
 export(taxacolor)
