shiny app in markdown output, not working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(PhONA)
 export(getMean)
+export(kmeans_cluster)
 export(lasso)
 export(model.lasso)
 export(model.linear)
@@ -10,3 +11,7 @@ export(read.mothur.shared)
 export(read.mothur.taxonomy)
 export(summarizePhONA)
 export(taxacolor)
+import(graphics)
+import(methods)
+import(shiny)
+import(stats)
