--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(model.linear)
 export(node.role)
 export(read.mothur.shared)
 export(read.mothur.taxonomy)
+export(rolePlot)
 export(summarizePhONA)
 export(taxacolor)
