--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(model.linear)
 export(node.role)
 export(read.mothur.shared)
 export(read.mothur.taxonomy)
+export(remove_rare)
 export(rolePlot)
 export(summarizePhONA)
 export(taxacolor)
